--- a/EvaSol/DataAccess/DataAccess.csproj
+++ b/EvaSol/DataAccess/DataAccess.csproj
@@ -36,6 +36,7 @@
       <HintPath>..\packages\System.ComponentModel.Annotations.5.0.0\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -52,12 +53,10 @@
     <Compile Include="Entities\Users.cs" />
     <Compile Include="Entities\Persons.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\MasterRepository.cs" />
     <Compile Include="Repositories\PersonsRepository.cs" />
     <Compile Include="Repositories\Respository.cs" />
   </ItemGroup>
   <ItemGroup />
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
